--- a/style/layout.css
+++ b/style/layout.css
@@ -1,2 +1,5 @@
-body{ text-align:center; }
-img{ width:160px;heigth:100px; border:1px solid blue; }
+body{ text-align:center; margin:20px auto; }
+img{ width:160px;heigth:90px; border:2px solid grey; margin-bottom:10px; border-radius:10px; }
+div{ float:left; margin-left:10px; width:15%;}
+li{ list-style-type: none; }
+h1{ font-family:"黑体"; color:red; text-align:center; }
