更改背景颜色为紫色

--- a/style/layout.css
+++ b/style/layout.css
@@ -1,4 +1,4 @@
-body{ text-align:center; margin:20px auto; }
+body{ text-align:center; margin:20px auto; background-color:#502788}
 img{ width:70%;heigth:50%; border:2px solid grey; margin-bottom:10px; border-radius:10px; }
 div{ float:left; margin-left:10px; width:15%;}
 li{ list-style-type: none; }
